--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,11 @@ target/
 .springBeans
 .sts4-cache
 
+# Environment variables
+target/classes/.env
+.env.local
+
+
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
